# G-RAG

./: .env.example  .gitignore  basic_flow.ipynb  basic_flow.py  main.py  op.txt  pyproject.toml  test-2.ipynb  test-integrated.py  test.ipynb
rag-cli/: DOCUMENT.md  __init__.py  rag_cli.py
src/: integrated_pipeline.py  pipeline.py
src/graph_builder/: _llm.py  example_usage.py  lc_neo4j.py  llm.py  simple_model.py  vector_search.py
src/ingestion/connectors/: audio_parser.py  image_parser.py  pdf_parser.py  video_parser.py
