[project]
name = "g-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv]>=1.0.0",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pdf2docx>=0.5.8",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.22",
    "pymupdfpro>=1.25.5",
    "pytesseract>=0.3.13",
]
